--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
     "lint:fix": "biome check --fix --unsafe && tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@re-dev/react-truncate": "^0.4.4",
     "@tanstack/react-query": "^5.75.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.511.0",
     "next": "16.0.7",
+    "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-responsive": "^10.0.0",
     "sharp": "^0.33.0",
     "slugify": "^1.6.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "truncate": "^3.0.0"
