--- a/docker/Dockerfile.prod
+++ b/docker/Dockerfile.prod
@@ -16,6 +16,7 @@ ENV NODE_ENV=production
 COPY next.config.ts tsconfig.json ./
 COPY src/ ./src
 COPY public/ ./public
+COPY messages/ ./messages
 
 # Build app & Inject secrets into build without persisting
 RUN yarn build
